--- a/Final_ipynb/financial-planner.ipynb
+++ b/Final_ipynb/financial-planner.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit 5 - Financial Planning\n"
+    "# Financial Planning\n"
    ]
   },
   {
@@ -1438,7 +1438,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Optional Challenge - Early Retirement\n",
+    "## Early Retirement\n",
     "\n",
     "\n",
     "### Five Years Retirement Option"
@@ -2569,7 +2569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
